Map: varios map fixes. Subscribe form validates email; Layer country with max-width and overflow-text ellipsis

--- a/app/assets/stylesheets/modules/map/_country-select.scss
+++ b/app/assets/stylesheets/modules/map/_country-select.scss
@@ -29,6 +29,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      padding-right: 40px;
     }
   }
   .chzn-drop {
